# h2

./: .env.local.example  pyproject.toml
.codespeak/: build_insight.json  codespeak_state.json  external_apis.json  last_checkpoint_in_user_area.json  last_successful_checkpoint.json  methods_to_test.json  methods_to_test_raw.json  runs_history.json  sha_to_checkpoint.json  spec.processed.md  test_reports.txt
django_app/: config.py  urls.py  views.py
django_app/templates/django_app/: base.html  error.html  home.html
django_proj/: settings.py
spec/: main.cs.md
tests/: test_config.py  test_external_api.py  test_views.py
